# bezy

./: .gitignore  CLAUDE.md  Cargo.toml  FONTIR_MIGRATION.md  README.md  ai-context.md  bezy-logo.sh  build-wasm.sh  debug.sh  llms.md  llms.txt
.cargo/: config.toml
.claude/agents/: code-quality-engineer.md
.cursor/rules/: bezy-app.mdc
assets/fonts/: BezyGrotesk.designspace  build-all-ufos.sh
assets/fonts/bezy-grotesk-bold.ufo/: fontinfo.plist  groups.plist  kerning.plist  lib.plist
assets/fonts/bezy-grotesk-regular.ufo/: groups.plist  kerning.plist  lib.plist
bezy-lib/: Cargo.toml
docs/: ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  FONTIR_KERNING_GROUPS.md  HARFBUZZ_IMPLEMENTATION_NOTES.md  LIVE_THEME_EDITING.md  TEXT_EDITOR_PERFORMANCE_OPTIMIZATION.md  THEME_CREATION_GUIDE.md  THEME_HOT_RELOAD.md  github-pages-deployment.md  logger.md  native-menu-research.md  port_completion_summary.md  refactoring_plan.md  rtl-arabic-implementation-plan.md  system_architecture_improvements.md  test_selection.md  ufo.md
shell_scripts/: bezy-logo.sh  build-github-pages.sh
src/: app.rs  camera.rs  cameras.rs  checkerboard.rs  cli.rs  commands.rs  component.rs  components.rs  coord_pane.rs  data.rs  debug.rs  debug_hud.rs  design_space.rs  draw.rs  edit_session.rs  edit_type.rs  glyph_pane.rs  grid.rs  hud.rs  lib.rs  main.rs  path.rs  plugins.rs  point.rs  point_list.rs  quadrant.rs  settings.rs  setup.rs  stub.rs  tests.rs  text_editor.rs  theme.rs  toolbar.rs  ufo.rs  ui_interaction.rs  undo.rs  undo_plugin.rs  util.rs  virtual_font.rs  workspace.rs  (+1 more)
src/access_toolbar/: mod.rs  ui.rs
src/core/: app.rs  cli.rs  cursor.rs  data.rs  errors.rs  input.rs  mod.rs  pointer.rs  settings.rs  sort.rs  sort_plugin.rs  state.rs
src/core/io/: gamepad.rs  input.rs  mod.rs  (+1 more)
src/crypto_toolbar/: mod.rs  ui.rs
src/data/: conversions.rs  fontir_adapter.rs  mod.rs  text_buffer.rs  ufo.rs  unicode.rs  virtual_font.rs  workspace.rs
src/edit_mode_toolbar/: circle.rs  hyper.rs  knife.rs  mod.rs  pan.rs  pen.rs  primitives.rs  primitives_mode.rs  select.rs  temporary_mode.rs  text.rs  ui.rs
src/editing/: edit_session.rs  edit_type.rs  mod.rs  sort.rs  sort_plugin.rs  system_sets.rs  text_editor_plugin.rs  undo.rs  undo_plugin.rs
src/geometry/: bezpath_editing.rs  component.rs  design_space.rs  indices.rs  mod.rs  path.rs  point.rs  point_list.rs  quadrant.rs
src/io/: mod.rs  ufo.rs  workspace.rs
src/main_toolbar/: knife.rs  measure.rs  mod.rs  pan.rs  pen.rs  primitives.rs  select.rs  square.rs  text.rs
src/rendering/: camera_responsive.rs  cameras.rs  checkerboard.rs  debug.rs  draw.rs  entity_pools.rs  fontir_glyph_outline.rs  glyph_outline.rs  mesh_cache.rs  mesh_glyph_outline.rs  mesh_utils.rs  metrics.rs  mod.rs  outline_coordination.rs  outline_elements.rs  point_backgrounds.rs  points.rs  selection.rs  sort_renderer.rs  sort_visuals.rs  unified_glyph_editing.rs
src/selection/: components.rs  mod.rs  nudge.rs  systems.rs
src/systems/: arabic_shaping.rs  commands.rs  debug.rs  fontir_lifecycle.rs  harfbuzz_shaping.rs  input_consumer.rs  lifecycle.rs  metrics.rs  mod.rs  plugins.rs  sort_interaction.rs  sort_manager.rs  startup_layout.rs  text_editor_sorts.rs  text_shaping.rs  ui_interaction.rs
src/tools/: adapters.rs  ai.rs  hyper.rs  knife.rs  measure.rs  metaballs.rs  mod.rs  pan.rs  pen.rs  pen_full.rs  select.rs  shapes.rs  text.rs  text_original.rs
src/ui/: file_menu.rs  glyph_grid.rs  hud.rs  mod.rs  palette.rs  text_editor.rs  theme.rs
src/utils/: debug.rs  logger.rs  mod.rs  performance.rs  setup.rs  tests.rs  util.rs
src_backup_tmp/core/: settings.rs
src_backup_tmp/data/: mod.rs  text_buffer.rs  ufo.rs  unicode.rs
src_backup_tmp/editing/: mod.rs  sort.rs  sort_plugin.rs  undo_plugin.rs
src_backup_tmp/geometry/: component.rs  mod.rs  path.rs
src_backup_tmp/rendering/: cameras.rs  draw.rs  glyph_outline.rs  metrics.rs  mod.rs  sort_renderer.rs
src_backup_tmp/systems/: commands.rs  mod.rs  plugins.rs  sort_manager.rs
src_backup_tmp/ui/: mod.rs  text_editor.rs
src_backup_tmp/utils/: debug.rs  setup.rs  util.rs
(+333 files in other folders)
