[package]
name = "bezy"
version = "0.1.0"
authors = ["Eli Heuer <elih@protonmail.com>"]
edition = "2021"

[dependencies]
bevy = { version = "0.15.2", features = ["dynamic_linking"] }
norad = { version = "0.3.1", features = ["druid", "rayon"] }
anyhow = "1.0"
spline = { version = "0.3.0", git = "https://github.com/eliheuer/spline.git", rev = "229f7e7" }
kurbo = "0.11.1"
clap = { version = "4.5.1", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

harfbuzz_rs = "2.0.1"
log = "0.4.8"
plist = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.13.0"
lopdf = "0.27.0"
svg = "0.13.1"
chrono = "0.4"
rand = "0.8"
bevy_pancam = "0.17.0"
bevy_prototype_lyon = "0.10.0"

# Enable small optimizations for local code
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

# Note: There will still be a warning about quick-xml v0.20.0 future incompatibility.
# This is coming from an indirect dependency and can be safely ignored for now.
