[package]
name = "bezy"
version = "0.1.0"
authors = ["Eli Heuer <elih@protonmail.com>"]
edition = "2021"

[dependencies]
bevy = "0.16.1"
bevy_pancam = "0.18.0"
norad = { version = "0.16.0", features = ["kurbo", "rayon"] }
kurbo = { version = "0.11.2", features = ["libm", "serde"] }
smol_str = "0.2"
anyhow = "1.0.86"
spline = { git = "https://github.com/eliheuer/spline.git", rev = "229f7e7" }
clap = { version = "4.5.4", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
log = "0.4.22"
env_logger = "0.11.3"
plist = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
base64 = "0.22.1"
contour-isobands = "0.4"
cosmic-text = "0.14.2"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
web-sys = "0.3"

[features]
# For profiling in development, see:
# https://github.com/bevyengine/bevy/blob/main/docs/profiling.md
dev = [
    "bevy/dynamic_linking",
]
