[package]
name = "bezy-lib"
version = "0.1.0"
authors = ["Eli Heuer <elih@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
harfbuzz_rs = "1.2"
log = "0.4.8"
plist = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.13.0"
lopdf = "0.27.0"
svg = "0.10.0"
chrono = "0.4"
